--- a/eds221_day2_comp.qmd
+++ b/eds221_day2_comp.qmd
@@ -7,23 +7,50 @@ execute:
   message: false
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+# Vectors
 
 ```{r}
-1 + 1
+#create a vector
+dogs <- c("teddy", "khora", "waffle", "banjo", "tallie")
+#check class
+class(dogs)
+
 ```
 
-You can add options to executable code like this
+putting a mix of data types
 
 ```{r}
-#| echo: false
-2 * 2
+cats <- c("creamsicle wolf", 14.2, 3L)
+class(cats)
+#reverts the data type to the most flexible form
+#find object three
+cats[1]
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r}
+years <- c(20, 40, 16, 2)
+class(years)
+#not stored as integers because no L
+#get more specific data type
+typeof(years)
+```
+
+Ask questions
+
+```{r}
+# Want to do a conditional check
+#is. <<< asks questions "is this THIS"
+# as. <<< gives command "make this THIS"
+
+is.numeric(years)
+is.character(years)
+```
+
+```{r}
+dog_food <-c(teddy = "purina", khora = "alpo", waffle = "fancy feast")
+#added names to vector, teddy, khora and waffle w/ values in quotation marks. 
+# can call by position
+dog_food[2]
+#or name
+dog_food["khora"]
+```
